tests/models/enum/unnamed/u16/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(max_items = 2)]
        u16
    ),
}
fn main() {}
